fixed flickering issue

--- a/design.css
+++ b/design.css
@@ -29,7 +29,7 @@ nav ul li img {
     margin: 0 0.4rem;
     filter: var(--invert-60);
     padding: 0.8rem;
-    transition: none;
+    transition: none !important;
 }
 
 nav ul li img[class="active"] {
@@ -208,7 +208,7 @@ section.contact {
 
 .project-icon {
     width: 100%;
-    height: 32rem;
+    height: 28rem;
     border-radius: 1rem;
     background-position: center;
     background-size: 100% 100%;
