--- a/media-query.css
+++ b/media-query.css
@@ -28,7 +28,7 @@
         width: 60%;
     }
     .project-icon {
-        height: 30rem;
+        height: 24rem;
     }
 }
 
@@ -117,7 +117,7 @@
         width: 80%;
     }
     .project-icon {
-        height: 30rem;
+        height: 32rem;
     }
 
 }
